--- a/server/Makefile
+++ b/server/Makefile
@@ -7,19 +7,20 @@ ifndef BINARY_DIR
 $(error BINARY_DIR is not set)
 endif
 
-ifndef APPLICATION
-$(error APPLICATION is not set)
+ifndef DAEMON
+$(error DAEMON is not set)
 endif
 
 WORKING_DIR := $(WORKING_DIR)/server
-OUTPUT = $(BINARY_DIR)/$(APPLICATION)d
+OUTPUT = $(BINARY_DIR)/$(DAEMON)
 
-SOURCE_DIR = ./src
+SOURCE_DIR = $(DAEMON_ROOT)/src
 SOURCES += $(shell find $(SOURCE_DIR) -name '*.c')
 OBJECTS += $(patsubst $(SOURCE_DIR)/%.c, $(WORKING_DIR)/%.o, $(SOURCES))
 
-LIB_LIST = X11 m Xext Xi pulse pulse-simple
-LIBS += $(addprefix -l,$(LIB_LIST))
+LIB_LIST = X11 m Xext Xi pulse pulse-simple 
+LIBS := $(addprefix -l,$(LIB_LIST))
+LIBS += $(LIBRARY_DIR)/lib$(LIBRARY).a
 
 CFLAGS  += -pthread
 
