--- a/client/Makefile
+++ b/client/Makefile
@@ -7,21 +7,20 @@ ifndef BINARY_DIR
 $(error BINARY_DIR is not set)
 endif
 
-ifndef APPLICATION
-$(error APPLICATION is not set)
+ifndef INTERFACE
+$(error INTERFACE is not set)
 endif
 
 WORKING_DIR := $(WORKING_DIR)/client
-OUTPUT = $(BINARY_DIR)/$(APPLICATION)
+OUTPUT = $(BINARY_DIR)/$(INTERFACE)
 
-SOURCE_DIR = ./src
+SOURCE_DIR = $(INTERFACE_ROOT)/src
 SOURCES += $(shell find $(SOURCE_DIR) -name '*.c')
 OBJECTS += $(patsubst $(SOURCE_DIR)/%.c, $(WORKING_DIR)/%.o, $(SOURCES))
 
-LIB_HEADERS = /usr/include
-LIB_PATHS = /usr/lib/x86_64-linux-gnu
-LIB_LIST = 
+LIB_LIST =
 LIBS := $(addprefix -l,$(LIB_LIST))
+LIBS += $(LIBRARY_DIR)/lib$(LIBRARY).a
 
 all: $(OUTPUT)
 
